[package]
name = "biomepw-website"
version = "0.1.0"
authors = ["Jordyn Newnham <jordyn@husk.pro>"]
edition = "2018"

[dependencies]
actix-web = "3"
mysql = "20.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3.5"
actix-files = "0.5.0"
bson = "1.1.0"
dotenv = "0.15.0"
env_logger = "0.8.1"