[package]
name = "biomepw-website"
version = "0.1.0"
authors = ["Jordyn Newnham <jordyn@husk.pro>"]
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3.5"
actix-files = "0.6.0-beta.1"
dotenv = "0.15.0"
env_logger = "0.8.1"
diesel = { version = "1.4.4", features = ["mysql", "numeric"] }
once_cell = "1.5.2"
dashmap = "4.0.2"